<resources>
    <string name="app_name">Employee ListView</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="salary">Salary</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="employee_added">Employee added</string>
    <string name="add_employee">Add employee</string>
    <string name="all_employees">All employees:</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>